--- a/bema/package.json
+++ b/bema/package.json
@@ -8,6 +8,20 @@
   },
   "author": "",
   "license": "ISC",
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all",
+      "last 2 ie version"
+    ],
+    "development": [
+      "last 2 chrome version",
+      "last 2 firefox version",
+      "last 2 safari version",
+      "last 2 ie version"
+    ]
+  },
   "devDependencies": {
     "browser-sync": "^2.26.13",
     "del": "^6.0.0",
