--- a/vote/package.json
+++ b/vote/package.json
@@ -31,7 +31,8 @@
   "eslintConfig": {
     "root": true,
     "env": {
-      "node": true
+        "es2020": true,
+        "node": true
     },
     "extends": [
       "plugin:vue/vue3-essential",
