--- a/vote-server/package.json
+++ b/vote-server/package.json
@@ -1,5 +1,6 @@
 {
   "name": "vote-server",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -9,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^3.6.5",
     "mysql": "^2.18.1"
