--- a/vote-server/package.json
+++ b/vote-server/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongodb": "^3.6.5",
-    "mysql": "^2.18.1"
+    "mongodb": "^3.6.5"
   }
 }
